manifests/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-frontend
  template:
    metadata:
      labels:
        app: history-care-frontend
    spec:
      containers:
        - name: history-care-frontend
          image: history-care-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
