manifests/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: history-care-frontend
spec:
  selector:
    app: history-care-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
